# opengl-samples

./: .gitignore  .gitmodules  README.md
3dfigures/: README.md  main.py
clipping/: README.md  main.py
lab1/: main.py
lab2/: CMakeLists.txt  figures.py  main.cpp  main.py
lab3/: main.py
optimization/: main_opt.py
rasterization/: README.md  main.py
realistic/: README.md  main.py
sample/: README.md  main.py
shaders/: README.md  figures.py  main.py
volumetric_figures/: figures.py  main.py
